  branch case coverage (use `make cover-branch' in `tests' directory)

* cleaned code:
     * removed support for aspects - not used any more

     * removed BPMN output - this does not belong here

     * removed 2-bit annotation - Wendy can do this

* implemented Wendy's new IG/OG formats

* added target for benchmarks (execute `make bench -C tests')

Version 1.13 (6 June 2009)
==========================

* the bit annotations are now written inside the nodes of the Graphviz dot
  annotation

* service automata can be drawn as Graphviz dot graphs using mode `sa'
  combined with `--dot' (`-d')

* removed `--noop' flag

* reorganized and cleaned up Dot output; in case of calculating an edit
  distance, only the result is printed; use mode `og' or `sa' to create a
  graphic for the input files

* moved command line parameters for GNU Gengetopt from Makefile to file
  `cmdline.ggo'

* adapted maintainer scripts for binary distributions to match the filenames
  used in Fiona

* Rachel can be translated using the LLVM-frontend for GCC (see
  `http://llvm.org/')

* updated `Doxyfile' and moved in into the `doc' directory; the documentation
  can be created using `make doxygen' which creates the directory
  `doc/doxygen'

* made adaptions to the Makefile options to be able to create Mac Universal
  binaries for 64 bit architectures (XCode 3.0 with SDK `MacOSX10.5.sdk' is
  needed)

* if Graphviz dot has not been found by the configure script, the dependent
  tests are skipped instead of throwing an error

* tests are now organized by GNU Autotest

Version 1.12 (17 January 2009)
==============================

* implemented methods to calculate a compact representation of the formulae
  annotated to the operating guideline's states according to the paper
  submitted to ACSD 2009; the new method can be triggered with the new mode
  `-m annotation'

* in mode `-m annotation', the `--dot' (`-d') parameter creates a version of