@@ -39,11 +39,12 @@ MAINTAINERCLEANFILES += $(BISON_FILES:.yy=.h)
 # GENERIC: copy the content of the config.log file to a C header #
 #----------------------------------------------------------------#
 config-log.h: $(top_builddir)/config.log
-	echo "/// the content of the file 'config.log' generated by the configure script" > $@
-	echo "#define CONFIG_LOG \\" >> $@
-	$(SED) -e 's/\\/\\\\/g' $< | $(SED) -e 's/"/\\"/g' | $(AWK) '{print "\""$$0"\\n\"\\"}' >> $@
-	echo '""' >> $@
-	echo "" >> $@
+	$(AM_V_GEN)
+	$(AM_V_at)echo "/// the content of the file 'config.log' generated by the configure script" > $@
+	$(AM_V_at)echo "#define CONFIG_LOG \\" >> $@
+	$(AM_V_at)$(SED) -e 's/\\/\\\\/g' $< | $(SED) -e 's/"/\\"/g' | $(AWK) '{print "\""$$0"\\n\"\\"}' >> $@
+	$(AM_V_at)echo '""' >> $@
+	$(AM_V_at)echo "" >> $@
 BUILT_SOURCES += config-log.h
 DISTCLEANFILES += config-log.h
 
@@ -51,7 +52,7 @@ DISTCLEANFILES += config-log.h
 # GENERIC: use GNU gengetopt to create command line parser #
 #----------------------------------------------------------#
 .ggo.c:
-	$(GENGETOPT) --input=$<
+	$(AM_V_GEN)$(GENGETOPT) --input=$<
 GENGETOPT_FILES = cmdline.ggo
 BUILT_SOURCES += $(GENGETOPT_FILES:.ggo=.c)
 EXTRA_DIST += $(GENGETOPT_FILES)
